--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
                 <h3>DEEPWORK.PRO</h3>
                 <p>A 3-hour focus terminal designed to keep you productive when your brain wants to scroll reels.</p>
                 <button class="btn" style="border-color: var(--neon-pink); color: var(--neon-pink);" onclick="location.href='deepwork.html'">RUN_MODULE</button>
+           
+          <div class="card category-fact" style="border-top: 4px solid var(--neon-green);">
+    <div class="card-icon">🍳</div>
+    <h3>COMING_SOON</h3>
+    <p>Something big is cooking in the lab. Higher specs, better logic, and zero bugs (hopefully).</p>
+    <button class="btn" style="border-color: var(--neon-green); color: var(--neon-green); cursor: default;">UNDER_DEVELOPMENT</button>
+   </div> 
+            
             </div>
         </div>
 
@@ -212,3 +220,4 @@
     </script>
 </body>
 </html>
+
