--- a/index.html
+++ b/index.html
@@ -28,21 +28,26 @@
             position: fixed; inset: 0; background: #000;
             display: flex; flex-direction: column; justify-content: center;
             align-items: center; z-index: 999999;
-            pointer-events: all; /* Ensure it accepts clicks */
+            pointer-events: all;
         }
 
         .intro-btn {
             background: none; border: 2px solid #fff; color: #fff; 
             padding: 15px 40px; cursor: pointer; font-family: 'Orbitron'; 
             letter-spacing: 5px; font-weight: 900; position: relative; z-index: 1000000;
+            margin-bottom: 20px;
         }
         .intro-btn:hover { background: #fff; color: #000; }
+
+        .intro-contact {
+            font-family: 'JetBrains Mono'; font-size: 10px; color: #444; margin-top: 10px;
+        }
 
         /* --- BACKGROUND PARTICLES --- */
         .particles {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background-image: radial-gradient(circle, rgba(56, 189, 248, 0.15) 1px, transparent 1px);
-            background-size: 50px 50px; z-index: -10; /* Very far back */
+            background-size: 50px 50px; z-index: -10; 
             animation: moveBackground 30s linear infinite;
         }
         @keyframes moveBackground { from { background-position: 0 0; } to { background-position: 100px 100px; } }
@@ -71,6 +76,7 @@
             background: rgba(15, 23, 42, 0.8); border: 1px solid rgba(56, 189, 248, 0.1);
             padding: 30px; border-radius: 4px; width: 280px; text-align: left;
             transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            display: flex; flex-direction: column;
         }
         .card:hover { 
             transform: translateY(-10px) scale(1.03); border-color: var(--neon-blue);
@@ -100,8 +106,9 @@
 <body>
 
     <div id="dixlabsIntro">
-        <img src="logo.png" style="width:180px; margin-bottom:30px;" onerror="this.style.display='none'">
+        <img src="logo.png" style="width:120px; margin-bottom:30px;" onerror="this.style.display='none'">
         <button id="bootBtn" class="intro-btn">INITIALIZE_CORE</button>
+        <div class="intro-contact">SYS_ADMIN: dixit181896@gmail.com</div>
     </div>
 
     <div class="particles"></div>
@@ -126,19 +133,28 @@
                 <p>Catching trash and dodging toxic waste because normal sports are too mainstream.</p>
                 <button class="btn" onclick="location.href='gd.html'">RUN_MODULE</button>
             </div>
+
             <div class="card category-game" style="border-top: 4px solid var(--neon-blue);">
                 <div class="card-icon">💰</div>
                 <h3>AMBANI_MONEY</h3>
                 <p>Simulating billionaire life. Because your bank balance won't reach 11 figures on its own.</p>
                 <button class="btn" onclick="location.href='ambani.html'">RUN_MODULE</button>
             </div>
+
             <div class="card category-focus" style="border-top: 4px solid var(--neon-pink);">
                 <div class="card-icon">🧘</div>
                 <h3>DEEPWORK.PRO</h3>
                 <p>A 3-hour focus terminal designed to keep you productive when your brain wants to scroll reels.</p>
-                <button class="btn" style="border-color: var(--neon-pink); color: var(--neon-pink);" onclick="location.href='deepwork.html'">RUN_MODULE</button
+                <button class="btn" style="border-color: var(--neon-pink); color: var(--neon-pink);" onclick="location.href='deepwork.html'">RUN_MODULE</button>
+            </div>
+
+            <div class="card category-fact" style="border-top: 4px solid var(--neon-green);">
+                <div class="card-icon">🍳</div>
+                <h3>COMING_SOON</h3>
+                <p>Something big is cooking in the lab. Higher specs, better logic, and zero bugs (hopefully).</p>
+                <button class="btn" style="border-color: var(--neon-green); color: var(--neon-green); cursor: default;">UNDER_DEVELOPMENT</button>
+            </div>
         </div>
-       </div>
 
         <section class="about-section">
             <div style="color: var(--neon-green); letter-spacing: 2px; margin-bottom: 15px;">[🧬] WHO_IS_BEHIND_THIS?</div>
@@ -158,15 +174,11 @@
     </div>
 
     <script>
-        // FORCED INITIALIZATION
         const bootBtn = document.getElementById("bootBtn");
         const introLayer = document.getElementById("dixlabsIntro");
 
         bootBtn.addEventListener("click", function() {
-            // 1. Kill the layer instantly
             introLayer.style.display = "none";
-            
-            // 2. Play sound
             try {
                 const ctx = new (window.AudioContext || window.webkitAudioContext)();
                 const osc = ctx.createOscillator();
@@ -178,9 +190,7 @@
                 gain.gain.exponentialRampToValueAtTime(0.01, ctx.currentTime + 0.5);
                 osc.connect(gain); gain.connect(ctx.destination);
                 osc.start(); osc.stop(ctx.currentTime + 0.5);
-            } catch(e) { console.log("Audio issue"); }
-
-            // 3. Start typewriter
+            } catch(e) {}
             typeWriter();
         });
 
@@ -212,7 +222,3 @@
     </script>
 </body>
 </html>
-
-
-
-
