--- a/gd.html
+++ b/gd.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GrossDump.ai — PRO</title>
+    <title>GrossDump — PRO</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -236,4 +236,5 @@
 </script>
 </body>
 </html>
+
 
