--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="card category-game" style="border-top: 4px solid var(--neon-blue);">
                 <div class="card-icon">🗑️</div>
                 <h3>GROSSDUMPSTER</h3>
-                <p>Catching trash and dodging toxic waste because normal sports are too mainstream.</p>
+                <p>Catching trash and dodging toxic waste because normal sports are too mainstream.(MUTED_SCHOOL)</p>
                 <button class="btn" onclick="location.href='gd.html'">RUN_MODULE</button>
             </div>
 
@@ -222,3 +222,4 @@
     </script>
 </body>
 </html>
+
