--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="google-site-verification" content="YOUR_ACTUAL_GOOGLE_CODE_HERE" />
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
     <link rel="icon" type="image/png" href="logo.png">
+
+<meta name="description" content="DixLabs creates games, simulations and creative web experiments.">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -222,4 +224,5 @@
     </script>
 </body>
 </html>
+
 
