--- a/index.html
+++ b/index.html
@@ -1,33 +1,480 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta name="google-site-verification" content="YOUR_ACTUAL_GOOGLE_CODE_HERE" />
 
-<meta name="google-site-verification" content="YOUR_ACTUAL_GOOGLE_CODE_HERE" />
+    <!-- ✅ STRONG FAVICON SETUP -->
+    <link rel="icon" type="image/png" sizes="512x512" href="/logo.png">
+    <link rel="shortcut icon" href="/logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png">
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>DixLabs — Games, Experiments & Focus Tools</title>
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
 <meta name="description" content="DixLabs creates games, simulations and creative web experiments.">
+    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dixit Labs | Games // Focus // Facts</title>
 
-<meta name="robots" content="index, follow">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=JetBrains+Mono:wght@300&display=swap" rel="stylesheet">
+    
+<style>
+:root {
+--neon-blue:#38bdf8;
+--neon-pink:#f472b6;
+--neon-green:#22c55e;
+--bg-dark:#020617;
+}
 
-<!-- FAVICON + LOGO (VERY IMPORTANT) -->
-<link rel="icon" type="image/png" sizes="512x512" href="/logo.png">
-<link rel="shortcut icon" href="/logo.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/logo.png">
+body{
+margin:0;background-color:var(--bg-dark);
+color:white;font-family:'Orbitron',sans-serif;
+text-align:center;overflow-x:hidden;
+}
 
-<!-- GOOGLE + SOCIAL PREVIEW -->
-<meta property="og:title" content="DixLabs">
-<meta property="og:description" content="Games, simulations and creative experiments by DixLabs.">
-<meta property="og:image" content="https://dixlabs.vercel.app/logo.png">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://dixlabs.vercel.app">
+/* --- STARTUP SCREEN --- */
+#dixlabsIntro{
+position:fixed;inset:0;background:#000;
+display:flex;flex-direction:column;
+justify-content:center;align-items:center;
+z-index:999999;pointer-events:all;
+}
 
-<!-- TWITTER / DISCORD PREVIEW -->
-<meta name="twitter:card" content="summary_large_image">
+.intro-btn{
+background:none;border:2px solid #fff;color:#fff;
+padding:15px 40px;cursor:pointer;
+font-family:'Orbitron';
+letter-spacing:5px;font-weight:900;
+position:relative;z-index:1000000;
+margin-bottom:20px;
+}
 
-<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+.intro-btn:hover{background:#fff;color:#000;}
 
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=JetBrains+Mono:wght@300&display=swap" rel="stylesheet">
+.intro-contact{
+font-family:'JetBrains Mono';
+font-size:10px;color:#444;margin-top:10px;
+}
 
+/* --- BACKGROUND PARTICLES --- */
+.particles{
+position:fixed;top:0;left:0;width:100%;height:100%;
+background-image:
+radial-gradient(circle,rgba(56,189,248,.15)1px,transparent 1px);
+background-size:50px 50px;
+z-index:-10;
+animation:moveBackground 30s linear infinite;
+}
+
+@keyframes moveBackground{
+from{background-position:0 0;}
+to{background-position:100px 100px;}
+}
+
+/* --- NAVIGATION --- */
+.nav-tabs{
+position:sticky;top:0;
+background:rgba(2,6,23,.95);
+backdrop-filter:blur(10px);
+display:flex;justify-content:center;
+gap:15px;padding:15px;
+border-bottom:1px solid rgba(255,255,255,.1);
+z-index:999;
+}
+
+.tab-link{
+cursor:pointer;padding:8px 15px;
+font-size:10px;letter-spacing:1px;
+text-transform:uppercase;font-weight:900;
+transition:.3s;
+}
+
+.tab-home.active{
+border:1px solid #fff;
+box-shadow:0 0 10px #fff;
+}
+
+.tab-games{color:var(--neon-blue);}
+.tab-games.active{
+border:1px solid var(--neon-blue);
+box-shadow:0 0 10px var(--neon-blue);
+}
+
+.tab-focus{color:var(--neon-pink);}
+.tab-focus.active{
+border:1px solid var(--neon-pink);
+box-shadow:0 0 10px var(--neon-pink);
+}
+
+.tab-facts{color:var(--neon-green);}
+.tab-facts.active{
+border:1px solid var(--neon-green);
+box-shadow:0 0 10px var(--neon-green);
+}
+
+header{padding:60px 20px;}
+
+.logo-text{
+font-size:clamp(2rem,6vw,4rem);
+font-weight:900;letter-spacing:10px;
+color:var(--neon-blue);
+text-shadow:0 0 15px rgba(56,189,248,.4);
+}
+
+/* --- CARDS --- */
+.projects{
+display:flex;justify-content:center;
+flex-wrap:wrap;gap:25px;
+padding:40px 20px;
+min-height:300px;
+}
+
+.card{
+background:rgba(15,23,42,.8);
+border:1px solid rgba(56,189,248,.1);
+padding:30px;border-radius:4px;
+width:280px;text-align:left;
+transition:all .4s cubic-bezier(.175,.885,.32,1.275);
+display:flex;flex-direction:column;
+}
+
+.card:hover{
+transform:translateY(-10px)scale(1.03);
+border-color:var(--neon-blue);
+box-shadow:
+0 20px 40px rgba(0,0,0,.6),
+0 0 20px rgba(56,189,248,.2);
+}
+
+.card-icon{
+font-size:2.5rem;margin-bottom:15px;
+display:inline-block;transition:.6s;
+}
+
+.card:hover .card-icon{
+transform:rotateY(360deg);
+}
+
+.btn{
+margin-top:auto;padding:12px;
+border:1px solid var(--neon-blue);
+background:transparent;
+color:var(--neon-blue);
+cursor:pointer;font-family:'Orbitron';
+font-size:10px;font-weight:900;
+width:100%;transition:.3s;
+}
+
+.btn:hover{
+background:var(--neon-blue);
+color:#000;letter-spacing:2px;
+}
+
+/* --- ABOUT --- */
+.about-section{
+max-width:800px;margin:80px auto;
+padding:40px;
+background:rgba(15,23,42,.4);
+border:1px solid rgba(56,189,248,.1);
+text-align:left;
+}
+
+.hidden{display:none!important;}
+
+footer{
+padding:60px 20px;background:#000;
+font-family:'JetBrains Mono';
+font-size:12px;
+}
+</style>
 </head>
+
+<body>
+
+<div id="dixlabsIntro">
+<img src="logo.png"
+style="width:120px;margin-bottom:30px;"
+onerror="this.style.display='none'">
+
+<button id="bootBtn" class="intro-btn">
+INITIALIZE_CORE
+</button>
+
+<div class="intro-contact">
+SYS_ADMIN: dixit181896@gmail.com
+</div>
+</div>
+
+<div class="particles"></div>
+
+<div id="mainContent">
+
+<nav class="nav-tabs">
+<div class="tab-link tab-home active"
+onclick="filterSelection('all', this)">
+🏠 ALL
+</div>
+
+<div class="tab-link tab-games"
+onclick="filterSelection('game', this)">
+🎮 GAMES
+</div>
+
+<div class="tab-link tab-focus"
+onclick="filterSelection('focus', this)">
+⚡ FOCUS
+</div>
+
+<div class="tab-link tab-facts"
+onclick="filterSelection('fact', this)">
+🧠 FACTS
+</div>
+</nav>
+
+<header>
+<div class="logo-text">DIXLABS</div>
+
+<p id="subHeader"
+style="font-family:'JetBrains Mono';
+color:var(--neon-pink);
+font-size:12px;height:1.2em;">
+</p>
+</header>
+
+<div class="projects">
+
+<div class="card category-game"
+style="border-top:4px solid var(--neon-blue);">
+
+<div class="card-icon">🗑️</div>
+
+<h3>GROSSDUMPSTER</h3>
+
+<p>
+Catching trash and dodging toxic waste because
+normal sports are too mainstream.(MUTED_SCHOOL)
+</p>
+
+<button class="btn"
+onclick="location.href='gd.html'">
+RUN_MODULE
+</button>
+</div>
+
+<div class="card category-game"
+style="border-top:4px solid var(--neon-blue);">
+
+<div class="card-icon">💰</div>
+
+<h3>AMBANI_MONEY</h3>
+
+<p>
+Simulating billionaire life.
+Because your bank balance won't reach
+11 figures on its own.
+</p>
+
+<button class="btn"
+onclick="location.href='ambani.html'">
+RUN_MODULE
+</button>
+</div>
+
+<div class="card category-focus"
+style="border-top:4px solid var(--neon-pink);">
+
+<div class="card-icon">🧘</div>
+
+<h3>DEEPWORK.PRO</h3>
+
+<p>
+A 3-hour focus terminal designed to keep you productive
+when your brain wants to scroll reels.
+</p>
+
+<button class="btn"
+style="border-color:var(--neon-pink);
+color:var(--neon-pink);"
+onclick="location.href='deepwork.html'">
+
+RUN_MODULE
+</button>
+</div>
+
+<div class="card category-fact"
+style="border-top:4px solid var(--neon-green);">
+
+<div class="card-icon">🍳</div>
+
+<h3>COMING_SOON</h3>
+
+<p>
+Something big is cooking in the lab.
+Higher specs, better logic,
+and zero bugs (hopefully).
+</p>
+
+<button class="btn"
+style="border-color:var(--neon-green);
+color:var(--neon-green);
+cursor:default;">
+
+UNDER_DEVELOPMENT
+</button>
+</div>
+
+</div>
+
+<section class="about-section">
+
+<div style="color:var(--neon-green);
+letter-spacing:2px;margin-bottom:15px;">
+[🧬] WHO_IS_BEHIND_THIS?
+</div>
+
+<div style="font-family:'JetBrains Mono';
+font-size:14px;line-height:1.8;color:#cbd5e1;">
+
+I am <b style="color:var(--neon-blue);">
+Atharv Dixit
+</b>,
+a 15-year-old student from India
+who spends way too much time staring
+at code and test tubes.
+
+<br><br>
+
+Dixit Labs is my personal "Area 51"—
+a place where I experiment with web tech,
+design, and ideas that actually work.
+
+<br><br>
+
+Basically,
+I’m a high-schooler trying to disrupt the web
+before my next chemistry exam.
+
+</div>
+</section>
+
+<footer>
+
+<p>DIXLABS 2026 // ATHARV DIXIT</p>
+
+<p>
+Contact:
+<a href="mailto:dixit181896@gmail.com"
+style="color:var(--neon-blue);
+text-decoration:none;">
+
+dixit181896@gmail.com
+</a>
+</p>
+
+</footer>
+
+</div>
+
+<script>
+const bootBtn=document.getElementById("bootBtn");
+const introLayer=document.getElementById("dixlabsIntro");
+
+bootBtn.addEventListener("click",function(){
+
+introLayer.style.display="none";
+
+try{
+
+const ctx=
+new(window.AudioContext||
+window.webkitAudioContext)();
+
+const osc=ctx.createOscillator();
+const gain=ctx.createGain();
+
+osc.type='sawtooth';
+
+osc.frequency.setValueAtTime(40,ctx.currentTime);
+
+osc.frequency
+.exponentialRampToValueAtTime(
+800,
+ctx.currentTime+.5
+);
+
+gain.gain.setValueAtTime(.1,ctx.currentTime);
+
+gain.gain
+.exponentialRampToValueAtTime(
+.01,
+ctx.currentTime+.5
+);
+
+osc.connect(gain);
+gain.connect(ctx.destination);
+
+osc.start();
+osc.stop(ctx.currentTime+.5);
+
+}catch(e){}
+
+typeWriter();
+
+});
+
+function typeWriter(){
+
+const el=document.getElementById("subHeader");
+
+const txt=
+"> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS";
+
+let i=0;
+
+el.innerHTML="";
+
+function type(){
+
+if(i<txt.length){
+
+el.innerHTML+=txt.charAt(i);
+
+i++;
+
+setTimeout(type,40);
+
+}
+
+}
+
+type();
+
+}
+
+function filterSelection(cat,el){
+
+const cards=document.querySelectorAll(".card");
+
+const tabs=document.querySelectorAll(".tab-link");
+
+tabs.forEach(t=>t.classList.remove("active"));
+
+el.classList.add("active");
+
+cards.forEach(c=>{
+
+if(cat==='all')
+c.classList.remove("hidden");
+
+else
+c.classList.contains("category-"+cat)
+?c.classList.remove("hidden")
+:c.classList.add("hidden");
+
+});
+
+}
+</script>
+
+</body>
+</html>
