--- a/index.html
+++ b/index.html
@@ -347,13 +347,14 @@ at code and test tubes.
 Dixit Labs is my personal "Area 51"—
 a place where I experiment with web tech,
 design, and ideas that actually work.
+Constantly Watching Cricket, Memes and Codes.
 
 <br><br>
 
 Basically,
 I’m a high-schooler trying to disrupt the web
-before my next chemistry exam.
-
+before my next exam.Relatives - Buy me a coffee.
+IF_A_BUG_CREEPS_IN_ITS_A_UNDOCUMENTED_FEATURE_NOT_A_BUG
 </div>
 </section>
 
@@ -478,3 +479,4 @@ c.classList.contains("category-"+cat)
 
 </body>
 </html>
+
