--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 
 <meta name="google-site-verification" content="YOUR_ACTUAL_GOOGLE_CODE_HERE" />
 
+<!-- ✅ FAVICON -->
 <link rel="icon" type="image/png" sizes="512x512" href="/logo.png">
 <link rel="shortcut icon" href="/logo.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/logo.png">
 
-<link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
 <meta name="description" content="DixLabs creates games, simulations and creative web experiments.">
 
@@ -28,40 +29,33 @@
 --bg-dark:#020617;
 }
 
-/* ⭐ BIG BOOT LOGO */
+/* ===========================
+🔥 LOGO SIZE CONTROL (EDIT HERE)
+change 220px → 260px etc anytime
+=========================== */
+
 .intro-logo{
-
-width:480px;
-
-max-width:85vw;
-
+width:220px;
+max-width:70vw;
 margin-bottom:35px;
-
-animation:bootGlow 1.2s ease forwards;
-
-filter:drop-shadow(0 0 25px #38bdf8);
-
+animation:logoBoot 1.2s ease forwards;
 }
 
-@keyframes bootGlow{
-
+/* small cinematic boot animation */
+@keyframes logoBoot{
 from{
 opacity:0;
-transform:scale(.75);
-filter:blur(8px);
+transform:scale(.8);
 }
-
 to{
 opacity:1;
 transform:scale(1);
-filter:drop-shadow(0 0 25px #38bdf8);
 }
-
 }
 
 body{
 margin:0;
-background:#020617;
+background-color:var(--bg-dark);
 color:white;
 font-family:'Orbitron',sans-serif;
 text-align:center;
@@ -69,67 +63,48 @@ overflow-x:hidden;
 }
 
 /* INTRO */
-
 #dixlabsIntro{
-
 position:fixed;
 inset:0;
 background:#000;
-
 display:flex;
 flex-direction:column;
 justify-content:center;
 align-items:center;
-
 z-index:999999;
-
+pointer-events:all;
 }
 
 .intro-btn{
-
 background:none;
 border:2px solid #fff;
 color:#fff;
-
 padding:15px 40px;
-
 cursor:pointer;
-
 font-family:'Orbitron';
-
 letter-spacing:5px;
-
 font-weight:900;
-
 margin-bottom:20px;
-
 }
 
 .intro-btn:hover{
-
 background:#fff;
 color:#000;
-
 }
 
 .intro-contact{
-
 font-family:'JetBrains Mono';
-
 font-size:10px;
-
 color:#444;
-
+margin-top:10px;
 }
 
 /* BACKGROUND */
 
 .particles{
-
 position:fixed;
 top:0;
 left:0;
-
 width:100%;
 height:100%;
 
@@ -141,272 +116,178 @@ background-size:50px 50px;
 z-index:-10;
 
 animation:moveBackground 30s linear infinite;
-
 }
 
 @keyframes moveBackground{
-
 from{background-position:0 0;}
-
 to{background-position:100px 100px;}
-
 }
 
 /* NAV */
 
 .nav-tabs{
-
 position:sticky;
 top:0;
-
 background:rgba(2,6,23,.95);
-
 backdrop-filter:blur(10px);
-
 display:flex;
 justify-content:center;
-
 gap:15px;
-
 padding:15px;
-
 border-bottom:1px solid rgba(255,255,255,.1);
-
 z-index:999;
-
 }
 
 .tab-link{
-
 cursor:pointer;
-
 padding:8px 15px;
-
 font-size:10px;
-
 letter-spacing:1px;
-
 text-transform:uppercase;
-
 font-weight:900;
-
 transition:.3s;
-
 }
 
 .tab-home.active{
-
 border:1px solid #fff;
-
 box-shadow:0 0 10px #fff;
-
 }
 
-.tab-games{color:#38bdf8;}
+.tab-games{color:var(--neon-blue);}
 
 .tab-games.active{
-
-border:1px solid #38bdf8;
-
-box-shadow:0 0 10px #38bdf8;
-
+border:1px solid var(--neon-blue);
+box-shadow:0 0 10px var(--neon-blue);
 }
 
-.tab-focus{color:#f472b6;}
+.tab-focus{color:var(--neon-pink);}
 
 .tab-focus.active{
-
-border:1px solid #f472b6;
-
-box-shadow:0 0 10px #f472b6;
-
+border:1px solid var(--neon-pink);
+box-shadow:0 0 10px var(--neon-pink);
 }
 
-.tab-facts{color:#22c55e;}
+.tab-facts{color:var(--neon-green);}
 
 .tab-facts.active{
-
-border:1px solid #22c55e;
-
-box-shadow:0 0 10px #22c55e;
-
+border:1px solid var(--neon-green);
+box-shadow:0 0 10px var(--neon-green);
 }
 
 header{
-
 padding:60px 20px;
-
 }
 
 .logo-text{
-
 font-size:clamp(2rem,6vw,4rem);
-
 font-weight:900;
-
 letter-spacing:10px;
-
-color:#38bdf8;
-
+color:var(--neon-blue);
 text-shadow:0 0 15px rgba(56,189,248,.4);
-
 }
 
 /* CARDS */
 
 .projects{
-
 display:flex;
 justify-content:center;
-
 flex-wrap:wrap;
-
 gap:25px;
-
 padding:40px 20px;
-
 min-height:300px;
-
 }
 
 .card{
-
 background:rgba(15,23,42,.8);
-
 border:1px solid rgba(56,189,248,.1);
-
 padding:30px;
-
 border-radius:4px;
-
 width:280px;
-
 text-align:left;
-
-transition:.4s;
-
+transition:.4s cubic-bezier(.175,.885,.32,1.275);
 display:flex;
-
 flex-direction:column;
-
 }
 
 .card:hover{
-
 transform:translateY(-10px)scale(1.03);
 
-border-color:#38bdf8;
+border-color:var(--neon-blue);
 
 box-shadow:
-
 0 20px 40px rgba(0,0,0,.6),
-
 0 0 20px rgba(56,189,248,.2);
-
 }
 
 .card-icon{
-
 font-size:2.5rem;
-
 margin-bottom:15px;
-
 transition:.6s;
-
 }
 
 .card:hover .card-icon{
-
 transform:rotateY(360deg);
-
 }
 
 .btn{
-
 margin-top:auto;
-
 padding:12px;
-
-border:1px solid #38bdf8;
-
+border:1px solid var(--neon-blue);
 background:transparent;
-
-color:#38bdf8;
-
+color:var(--neon-blue);
 cursor:pointer;
-
 font-family:'Orbitron';
-
 font-size:10px;
-
 font-weight:900;
-
 width:100%;
-
+transition:.3s;
 }
 
 .btn:hover{
-
-background:#38bdf8;
-
+background:var(--neon-blue);
 color:#000;
-
 letter-spacing:2px;
-
 }
 
 .about-section{
-
 max-width:800px;
-
 margin:80px auto;
-
 padding:40px;
-
 background:rgba(15,23,42,.4);
-
 border:1px solid rgba(56,189,248,.1);
-
 text-align:left;
-
 }
 
-.hidden{display:none!important;}
+.hidden{
+display:none!important;
+}
 
 footer{
-
 padding:60px 20px;
-
 background:#000;
-
 font-family:'JetBrains Mono';
-
 font-size:12px;
-
 }
 
 </style>
-
 </head>
 
 <body>
 
+<!-- INTRO -->
+
 <div id="dixlabsIntro">
 
-<img src="logo.png?v=10"
+<img src="logo.png"
 class="intro-logo"
 onerror="this.style.display='none'">
 
 <button id="bootBtn" class="intro-btn">
-
 INITIALIZE_CORE
-
 </button>
 
 <div class="intro-contact">
-
 SYS_ADMIN: dixit181896@gmail.com
-
 </div>
 
 </div>
@@ -414,3 +295,231 @@ SYS_ADMIN: dixit181896@gmail.com
 <div class="particles"></div>
 
 <div id="mainContent">
+
+<nav class="nav-tabs">
+
+<div class="tab-link tab-home active"
+onclick="filterSelection('all', this)">
+🏠 ALL
+</div>
+
+<div class="tab-link tab-games"
+onclick="filterSelection('game', this)">
+🎮 GAMES
+</div>
+
+<div class="tab-link tab-focus"
+onclick="filterSelection('focus', this)">
+⚡ FOCUS
+</div>
+
+<div class="tab-link tab-facts"
+onclick="filterSelection('fact', this)">
+🧠 FACTS
+</div>
+
+</nav>
+
+<header>
+
+<div class="logo-text">
+DIXLABS
+</div>
+
+<p id="subHeader"
+style="font-family:'JetBrains Mono';
+color:var(--neon-pink);
+font-size:12px;
+height:1.2em;">
+</p>
+
+</header>
+
+<!-- PROJECTS -->
+
+<div class="projects">
+
+<div class="card category-game"
+style="border-top:4px solid var(--neon-blue);">
+
+<div class="card-icon">🗑️</div>
+
+<h3>GROSSDUMPSTER</h3>
+
+<p>
+Catching trash and dodging toxic waste because normal sports are too mainstream.(MUTED_SCHOOL)
+</p>
+
+<button class="btn"
+onclick="location.href='gd.html'">
+RUN_MODULE
+</button>
+
+</div>
+
+<div class="card category-game"
+style="border-top:4px solid var(--neon-blue);">
+
+<div class="card-icon">💰</div>
+
+<h3>AMBANI_MONEY</h3>
+
+<p>
+Simulating billionaire life.
+Because your bank balance won't reach 11 figures on its own.
+</p>
+
+<button class="btn"
+onclick="location.href='ambani.html'">
+RUN_MODULE
+</button>
+
+</div>
+
+<div class="card category-focus"
+style="border-top:4px solid var(--neon-pink);">
+
+<div class="card-icon">🧘</div>
+
+<h3>DEEPWORK.PRO</h3>
+
+<p>
+A 3-hour focus terminal designed to keep you productive when your brain wants to scroll reels.
+</p>
+
+<button class="btn"
+style="border-color:var(--neon-pink);color:var(--neon-pink);"
+onclick="location.href='deepwork.html'">
+
+RUN_MODULE
+
+</button>
+
+</div>
+
+</div>
+
+<footer>
+
+<p>DIXLABS 2026 // ATHARV DIXIT</p>
+
+<p>
+
+Contact:
+
+<a href="mailto:dixit181896@gmail.com"
+style="color:var(--neon-blue);text-decoration:none;">
+
+dixit181896@gmail.com
+
+</a>
+
+</p>
+
+</footer>
+
+</div>
+
+<script>
+
+const bootBtn=document.getElementById("bootBtn");
+const introLayer=document.getElementById("dixlabsIntro");
+
+bootBtn.addEventListener("click",function(){
+
+introLayer.style.display="none";
+
+try{
+
+const ctx=new(window.AudioContext||window.webkitAudioContext)();
+
+const osc=ctx.createOscillator();
+
+const gain=ctx.createGain();
+
+osc.type='sawtooth';
+
+osc.frequency.setValueAtTime(40,ctx.currentTime);
+
+osc.frequency.exponentialRampToValueAtTime(
+800,
+ctx.currentTime+.5
+);
+
+gain.gain.setValueAtTime(.1,ctx.currentTime);
+
+gain.gain.exponentialRampToValueAtTime(
+.01,
+ctx.currentTime+.5
+);
+
+osc.connect(gain);
+
+gain.connect(ctx.destination);
+
+osc.start();
+
+osc.stop(ctx.currentTime+.5);
+
+}catch(e){}
+
+typeWriter();
+
+});
+
+function typeWriter(){
+
+const el=document.getElementById("subHeader");
+
+const txt="> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS";
+
+let i=0;
+
+el.innerHTML="";
+
+function type(){
+
+if(i<txt.length){
+
+el.innerHTML+=txt.charAt(i);
+
+i++;
+
+setTimeout(type,40);
+
+}
+
+}
+
+type();
+
+}
+
+function filterSelection(cat,el){
+
+const cards=document.querySelectorAll(".card");
+
+const tabs=document.querySelectorAll(".tab-link");
+
+tabs.forEach(t=>t.classList.remove("active"));
+
+el.classList.add("active");
+
+cards.forEach(c=>{
+
+if(cat==='all')
+c.classList.remove("hidden");
+
+else
+c.classList.contains("category-"+cat)
+?c.classList.remove("hidden")
+:c.classList.add("hidden");
+
+});
+
+}
+
+</script>
+
+</body>
+</html>
